# docspine

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  NOTICE  README.md  THIRD-PARTY-NOTICES.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
crates/doc-core/: Cargo.toml
crates/doc-core/src/: error.rs  export.rs  geom.rs  lib.rs  model.rs  numbering.rs  style.rs
crates/doc-ocr/: Cargo.toml
crates/doc-ocr/src/: lib.rs  table.rs
crates/doc-ocr/tests/: image_table.rs
crates/doc-parse/: Cargo.toml
crates/doc-parse/src/: legacy.rs  lib.rs  zip_pkg.rs
crates/doc-parse/src/xml/: document.rs  mod.rs  numbering.rs  props.rs  settings.rs  styles.rs  theme.rs
crates/doc-parse/tests/: parse.rs  styles.rs
crates/doc-render/: Cargo.toml
crates/doc-render/src/: lib.rs  map.rs  section.rs  table.rs  warn.rs
crates/py-bindings/: Cargo.toml
crates/py-bindings/src/: lib.rs
docs/: PRD-PDF-EXPORT.md
python/docspine/: __init__.py  __init__.pyi  _core.pyi
python/tests/: conftest.py  test_ocr.py  test_parse.py  test_pdf_export.py
scripts/: lo_oracle_ssim.py  set_version_from_tag.py  ssim_selfref.py
