[package]
name = "doc-render"
publish = false
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "docspine PDF renderer: maps the doc-core IR onto the pdf-typeset flow-layout engine (PRD-PDF-EXPORT C-1)."

[dependencies]
doc-core = { workspace = true }
# 家族共享排版引擎(pdfspine Phase A)。经 workspace 的 git dep + 钉死 rev 进来;
# 它 re-export 了消费者需要的 pdf-edit/pdf-core 面,不要再直接依赖那些 crate。
pdf-typeset = { workspace = true }

[dev-dependencies]
# 测试用:借 pdf-typeset 同仓的已内嵌 Liberation 字体字节造 font_map 文件路径测试
# fixture(改名后写临时文件),不新增二进制 fixture。同 git repo + 同 rev,复用已拉取的
# checkout,不额外增网络开销。
pdf-fonts = { git = "https://github.com/VoldemortGin/pdfspine", rev = "7ccee8aca1df01c63b6fefe7280021e04fc687d3", package = "pdf-fonts" }
